<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:progressBackgroundTint="@color/Primary100"
        android:elevation="4dp"
        />

    <RelativeLayout
        android:id="@+id/top_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_logo" />

        <TextView
            android:id="@+id/exposure_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logo"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@color/Primary100"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_below="@id/top_section">

        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textColor="@color/Primary400"
            android:layout_marginVertical="10dp"
            android:layout_centerHorizontal="true"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_text"
            android:layout_marginVertical="5dp"
            android:hint="@string/email"
            app:boxBackgroundMode="outline"
            style="@style/TextInputLayoutStyle">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_field"
            android:hint="@string/password"
            android:layout_marginVertical="5dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:helperText="Forgot password?"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="12.5dp"
            android:text="@string/login"
            android:textColor="#000000"
            android:onClick="loginUser"
            android:backgroundTint="@color/Primary100"
            app:cornerRadius="200dp"
            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/existing_account_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/do_not_have_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up_now"
            android:layout_centerHorizontal="true"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/do_not_have_account_text"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:backgroundTint="@color/Primary400"
            android:onClick="startSignUpActivity"
            app:cornerRadius="200dp"
            />

    </RelativeLayout>

</RelativeLayout>